nixidy/generated/prod/music-assistant/Service-music-assistant.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: music-assistant
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: music-assistant
    app.kubernetes.io/service: music-assistant
  name: music-assistant
  namespace: media
spec:
  ports:
    - name: http
      port: 8095
      protocol: TCP
      targetPort: 8095
  selector:
    app.kubernetes.io/controller: music-assistant
    app.kubernetes.io/instance: music-assistant
    app.kubernetes.io/name: music-assistant
  type: ClusterIP
