nixidy/generated/prod/music-assistant/HTTPRoute-music-assistant.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: music-assistant
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: music-assistant
  name: music-assistant
  namespace: media
spec:
  hostnames:
    - music-assistant.trdos.me
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: oauth2-proxy
          namespace: identity
          port: 4180
          weight: 1
